2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-vorbis as used in
	http://www.play.cz/radio-7

2007-09-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_parent_window_notify):
	When an error occurs and we dismiss the error dialogue, don't hide
	the cursor if we're not in fullscreen
	* src/totem.c: (totem_action_seek), (seek_slider_released_cb):
	When a seek error occurs, reset the seeking so that the interface
	is ready to use again

2007-09-21  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-python-module.c:
	(totem_python_module_init_python): Initialise PyGObject threads
	as soon as possible, or it could cause assertions when using
	threaded python code (See: #469852)

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_set_cursor),
	(totem_fullscreen_motion_notify),
	(totem_fullscreen_parent_window_notify): Only show the popup on
	motion notifies if the window is active, show the cursor on the
	video window when it's not active, or when it becomes active
	(Closes: #471381)

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* data/fullscreen.ui:
	* src/totem-fullscreen.c: (totem_fullscreen_popup_timeout_add),
	(totem_fullscreen_is_volume_popup_visible),
	(totem_fullscreen_force_popup_hide), (totem_fullscreen_popup_hide),
	(totem_fullscreen_set_fullscreen), (totem_fullscreen_new):
	Remove the vol_lock, and check whether the popup is visible instead
	Force the volume scale to popdown when going out of fullscreen
	(Closes: #477529, #452245)

2007-09-18  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_construct):
	Create the cursor before setting the playback state so the cursor can
	be set properly. Set the logo to be a play button when no autostart
	is used (Closes: #474059)

2007-09-17  Bastien Nocera  <hadess@hadess.net>

	* data/mozilla-viewer.ui: