@@ -385,6 +385,8 @@ totem_scrsaver_init (TotemScrsaver *scr)
 void
 totem_scrsaver_disable (TotemScrsaver *scr)
 {
+	g_return_if_fail (TOTEM_SCRSAVER (scr));
+
 	if (scr->priv->disabled != FALSE)
 		return;
 
@@ -404,6 +406,8 @@ totem_scrsaver_disable (TotemScrsaver *scr)
 void
 totem_scrsaver_enable (TotemScrsaver *scr)
 {
+	g_return_if_fail (TOTEM_SCRSAVER (scr));
+
 	if (scr->priv->disabled == FALSE)
 		return;
 
@@ -423,6 +427,8 @@ totem_scrsaver_enable (TotemScrsaver *scr)
 void
 totem_scrsaver_set_state (TotemScrsaver *scr, gboolean enable)
 {
+	g_return_if_fail (TOTEM_SCRSAVER (scr));
+
 	if (scr->priv->disabled == !enable)
 		return;
 
